# ric-events

./: Makefile  config-test.yaml  ric-events.cabal  run-server.hs  test.hs
RicEvents/: Config.hs  Database.hs  Locale.hs  Main.hs  View.hs
