Name: MahScorer
Version: 0.0.1
Author: Keita Mizuochi
Cabal-Version: >= 1.2
Build-Type: Simple
Extra-Source-Files: RicEvents/*.hs

Executable ric-events.cgi
  Main-Is: main.hs
  GHC-Options: -Wall -O2 -fno-warn-unused-binds
  Extensions: DoAndIfThenElse, FlexibleInstances
  Build-Depends:
    base == 4.*, mtl == 2.*, containers == 0.4.*,
    parsec == 3.1.*, aeson >= 0.6

Test-Suite test
  Type: exitcode-stdio-1.0
  Main-Is: test.hs
  GHC-Options: -Wall -O0
  Extensions: DoAndIfThenElse, StandaloneDeriving, FlexibleInstances
  Build-Depends:
    base == 4.*, mtl == 2.*, containers == 0.4.*,
    parsec == 3.1.*, HUnit == 1.2.*, aeson >= 0.6
