Name: ric-events
Version: 0.0.1
Author: Keita Mizuochi
Cabal-Version: >= 1.2
Build-Type: Simple
Extra-Source-Files: RicEvents/*.hs

Executable ric-events.cgi
  Main-Is: main.hs
  GHC-Options: -Wall -O2 -fno-warn-unused-binds -fno-warn-incomplete-patterns
  Extensions: DoAndIfThenElse, FlexibleInstances
  Build-Depends:
    base == 4.*, mtl == 2.*, containers == 0.4.*,
    parsec == 3.1.*, aeson >= 0.6, filepath >= 1.2,
    bytestring >= 0.9, attoparsec >= 0.9, text >= 0.11,
    vector >= 0.9

Executable run-server
  Main-Is: run-server.hs
  GHC-Options: -Wall -O2
  Extensions: DoAndIfThenElse
  Build-Depends:
    base >= 4.0, warp >= 1.1, wai >= 1.1, conduit >= 0.2 && < 0.3, http-types >= 0.6

Test-Suite test
  Type: exitcode-stdio-1.0
  Main-Is: test.hs
  GHC-Options: -Wall -O0 -fno-warn-incomplete-patterns
  Extensions: DoAndIfThenElse, StandaloneDeriving, FlexibleInstances
  Build-Depends:
    base == 4.*, mtl == 2.*, containers == 0.4.*,
    parsec == 3.1.*, HUnit == 1.2.*, aeson >= 0.6, filepath >= 1.2,
    bytestring >= 0.9, attoparsec >= 0.9, text >= 0.11,
    directory >= 1.1, vector >= 0.9
